Revision history for perl distribution Mojo-Redis

3.28 Not Released
 - Add "json" event to Mojo::Redis::PubSub

3.27 2021-11-20T10:51:49+0900
 - Add experimental "subscribe" and "psubscribe" events to Mojo::Redis::PubSub
 - Fix examples for set and expire #62
 - Fix handling "psubscribe" response from Redis #63
 - Fix sending database requests after connecting to sentinel server #64
 - Fix only passing on (p)message messages to listen handlers #67
 - Remove experimental write_q() method, and replaced it with write()
 - Remove the ->multi_p(@promises) syntax #68 #70
   Contributor: Jan "Yenya" Kasprzak

3.26 2021-03-01T09:01:51+0900
 - Avoid circular reference in redis response parser
   Contributor: Dan Book

3.25 2020-10-02T10:21:30+0900
 - Fix handling undef() in _process_...() methods #56
 - Fix some leaks in Mojo::Redis::PubSub
 - Add Mojo::Redis::PubSub->notify_p()

3.24 2019-05-07T22:25:50+0700
 - Fix PubSub->keyspace_listen() #42

3.23 2019-05-04T21:12:25+0700
 - Fix compatibility with Mojolicious 8.15 #46

3.22 2019-04-24T12:32:18+0700
 - Forgot to update protocol parser for Mojo::Redis::Cache after 3.21 #43
 - Fix broken link in Mojo::Redis::Connection #44
   Contributor: Mohammad S Anwar

3.21 2019-04-16T09:58:44+0700
 - Changed default protocol parser to Protocol::Redis::XS #43

3.20 2019-04-04T10:31:03+0700
 - Use Protocol::Redis::Faster instead of Protocol::Redis #38
 - Only decode data from bulk string responses #40
 - Fix allowing custom URL object with userinfo in constructor #41

3.19 2019-01-31T13:03:11+0900
 - Add support for encoding and decoding of JSON messages in Mojo::Redis::PubSub

3.18 2019-01-31T12:39:46+0900
 - Add reconnect logic for Mojo::Redis::PubSub #37
 - Add CAVEATS for Protocol::Redis::XS #38
 - Changed default protocol to Protocol::Redis #38
 - Updated documentation to use nicer variable names

3.17 2018-12-17T19:03:43+0900
 - Made connection-lost.t more robust
 - Add xread_structured() method